--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 
     </div>
     <div class = "error_display"></div>
+
+
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('nobody99', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support Me',
+    'floating-chat.donateButton.background-color': '#794bc4',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
 <script src="main.js"></script>
 </body>
 </html>
